--- a/templates/hospital_registration.html
+++ b/templates/hospital_registration.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Hospital Registration</title>
+    <title>Hospital</title>
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <style>
         body {
@@ -14,7 +14,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 90vh;
+            height: auto;
             background-color: #f0f2f5;
         }
 
@@ -24,6 +24,8 @@
             padding: 36px 36px;
             border-radius: 10px;
             box-shadow: 0 6px 15px rgba(0,0,0,0.15);
+            margin-top: 20px;
+            margin-bottom: 20px;
         }
 
         .login-card h2 {
@@ -224,7 +226,7 @@
                     </div>
                     <div class="field" style="width: 97px;">
                         <label>Pincode</label>
-                        <input type="pincode" name="pincode" placeholder="Pincode" required>
+                        <input type="integer" name="pincode" placeholder="Pincode" required>
                     </div>
                 </div>
 
