--- a/templates/emergency.html
+++ b/templates/emergency.html
@@ -2,11 +2,81 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Emergency</title>
+    <title>Hospital</title>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
     <style>
         body {
             margin: 0;
             font-family: Arial, sans-serif;
+        }
+
+        .login {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: auto;
+            background-color: #f0f2f5;
+        }
+
+        .login-card {
+            background: #ffffff;
+            width: 480px;
+            padding: 36px 36px;
+            border-radius: 10px;
+            box-shadow: 0 6px 15px rgba(0,0,0,0.15);
+            margin-top: 20px;
+            margin-bottom: 20px;
+        }
+
+        .login-card h2 {
+            text-align: center;
+            margin-bottom: 10px;
+            color: #2c3e50;
+        }
+
+        .login-card p {
+            text-align: center;
+            font-size: 14px;
+            color: #666;
+            margin-bottom: 25px;
+        }
+
+        label {
+            font-size: 14px;
+            margin-top: 12px;
+            display: block;
+            color: #333;
+        }
+
+        input {
+            width: 95%;
+            padding: 9px;
+            margin-top: 4px;
+            border-radius: 8px;
+            border: 1px solid #ccc;
+            font-size: 14px;
+            align-self: center;
+        }
+
+        input:focus {
+            outline: none;
+            border-color: #3498db;
+        }
+
+        .login-btn {
+            margin-top: 22px;
+            width: 100%;
+            padding: 11px;
+            border: none;
+            background-color: #3498db;
+            color: white;
+            font-size: 15px;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .login-btn:hover {
+            background-color: #2c80b4;
         }
 
         .top-border {
@@ -65,13 +135,49 @@
         }
 
         .spacer {
-            height: 1200px;   /* just to create scroll */
+            height: 10px;   /* just to create scroll */
+        }
+
+        .row {
+            display: flex;
+            gap: 57px;
+        }
+
+        .field-half {
+            flex: 1;
+        }
+
+        .field label {
+            font-size: 14px;
+            margin-top: 12px;
+            display: block;
+            color: #333;
+        }
+
+        .field input {
+            width: 106%;
+            padding: 9px;
+            margin-top: 4px;
+            border-radius: 8px;
+            border: 1px solid #ccc;
+            font-size: 14px;
+            align-self: center;
+        }
+
+        .field button {
+            margin-top: 10px;
+            white-space: nowrap; 
+            padding: 8px 8px;
+            cursor: pointer;
+            border-radius: 8px;
         }
 
         #end-content {
             padding: 30px;
             background-color: #f1f1f1;
         }
+
+
     </style>
 </head>
 <body>
@@ -88,8 +194,58 @@
         </div>
     </div>
 
-    <div style="padding: 20px;">
-        Page content goes here...
+    <div class="login">
+        <div class="login-card">
+            <h1 style="color: red; text-align: center;">EMERGENCY</h1>
+            <p>We Are Ready to Help</p>
+
+            <form method="POST" action="/emergency_hosp">
+                <label>First name</label>
+                <input type="text" name="fname" required>
+                
+                <label>Last name</label>
+                <input type="text" name="lname" required>
+
+                <div class ="row">
+                    <div class="field">
+                        <label>Date of Birth</label>
+                        <input type="date" name="dob" required>
+                    </div>
+                    <div class="field">
+                        <label>Phone Number</label>
+                        <input type="text" name="phone" placeholder="Without Country Code" required>
+                    </div>
+                </div>
+                
+                <label>Email</label>
+                <input type="email" name="email" placeholder="example@mail.com" required>
+
+                <div class="row">
+                    <div class="field">
+                        <label>Address</label>
+                        <input type="number" name="pincode" placeholder="Just Pincode or Use Current Location" required>
+                        <button type="button" onclick="getLocation()">Use My Location</button>
+                    </div>
+                </div>
+                <label>Reason for visit</label>
+                <input type="text" name="emergency_reason" placeholder="eg- shortness of breath, blood loss etc" required>
+
+                <div class="row">
+                    <div class="field">
+                        <label>Create Password</label>
+                        <input type="password" name="password" required>
+                    </div>
+                    <div class="field">
+                        <label>Confirm Password</label>
+                        <input type="password" name="conf_password" required>
+                    </div>
+                </div>
+
+                <button type="submit" class="login-btn">Next</button>
+
+            </form>
+
+        </div>
     </div>
 
     <div class="spacer"></div>
@@ -98,6 +254,31 @@
         <h2>About Us</h2>
         <p>Welcome to Hospitalizee, the ultimate solution to hospital management. We are dedicated to providing top-notch services to ensure efficient and effective healthcare management.</p>
     </div>
+
+    <script>
+    function getLocation() {
+        navigator.geolocation.getCurrentPosition(
+            pos => {
+                const lat = pos.coords.latitude;
+                const lng = pos.coords.longitude;
+
+                fetch("/save-location", {
+                    method: "POST",
+                    headers: {
+                        "Content-Type": "application/json"
+                    },
+                    body: JSON.stringify({
+                        lat: lat,
+                        long: lng
+                    })
+                })
+                .then(res => res.json())
+                .then(data => alert(data.message));
+            },
+            err => alert("Location access denied")
+        );
+    }
+    </script>
 
 </body>
 </html>
