--- a/templates/emergency_hosp.html
+++ b/templates/emergency_hosp.html
@@ -1,1 +1,275 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Hospital</title>
+    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <style>
+        body {
+            margin: 0;
+            font-family: Arial, sans-serif;
+        }
 
+        .login {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: auto;
+            background-color: #f0f2f5;
+        }
+
+        .login-card {
+            background: #ffffff;
+            width: 480px;
+            padding: 36px 36px;
+            border-radius: 10px;
+            box-shadow: 0 6px 15px rgba(0,0,0,0.15);
+            margin-top: 20px;
+            margin-bottom: 20px;
+        }
+
+        .login-card h2 {
+            text-align: center;
+            margin-bottom: 10px;
+            color: #2c3e50;
+        }
+
+        .login-card p {
+            text-align: center;
+            font-size: 14px;
+            color: #666;
+            margin-bottom: 25px;
+        }
+
+        label {
+            font-size: 14px;
+            margin-top: 12px;
+            display: block;
+            color: #333;
+        }
+
+        input {
+            width: 95%;
+            padding: 9px;
+            margin-top: 4px;
+            border-radius: 8px;
+            border: 1px solid #ccc;
+            font-size: 14px;
+            align-self: center;
+        }
+
+        input:focus {
+            outline: none;
+            border-color: #3498db;
+        }
+
+        .login-btn {
+            margin-top: 22px;
+            width: 100%;
+            padding: 11px;
+            border: none;
+            background-color: #3498db;
+            color: white;
+            font-size: 15px;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .login-btn:hover {
+            background-color: #2c80b4;
+        }
+
+        .top-border {
+            border-top: 0px solid #077cf0;   /* upper border */
+            background-color: #a5edff;
+            padding: 5px 30px;
+
+            /* layout */
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+        }
+
+        .top-border h1 {
+            margin: 5px 0;
+            font-size: 26px;
+            font-weight: bold;
+            color: #000000;
+        }
+        .top-border h4 {
+            margin: 0;
+            font-size: 14px;
+            font-style: italic;
+            color: #000000;
+        }
+        .btn-group {
+            display: flex;
+            gap: 10px;
+        }
+
+        .btn {
+            padding: 8px 16px;
+            text-decoration: none;
+            border: none;
+            background-color: #2c3e50;
+            color: white;
+            font-size: 14px;
+            cursor: pointer;
+            border-radius: 4px;
+        }
+
+        .btn-all {
+            background-color: black;
+        }
+
+        .btn-emergency {
+            background-color: #ff1500;
+        }
+        
+        .btn-all:hover {
+            background-color: #2c3e50
+        }
+
+        .btn-emergency:hover {
+            background-color: #7f1205
+        }
+
+        .spacer {
+            height: 10px;   /* just to create scroll */
+        }
+
+        .row {
+            display: flex;
+            gap: 57px;
+        }
+
+        .field-half {
+            flex: 1;
+        }
+
+        .field label {
+            font-size: 14px;
+            margin-top: 12px;
+            display: block;
+            color: #333;
+        }
+
+        .field input {
+            width: 106%;
+            padding: 9px;
+            margin-top: 4px;
+            border-radius: 8px;
+            border: 1px solid #ccc;
+            font-size: 14px;
+            align-self: center;
+        }
+
+        .field button {
+            margin-top: 10px;
+            white-space: nowrap; 
+            padding: 8px 8px;
+            cursor: pointer;
+            border-radius: 8px;
+        }
+
+        #end-content {
+            padding: 30px;
+            background-color: #f1f1f1;
+        }
+
+
+    </style>
+</head>
+<body>
+
+    <div class="top-border">
+        <div>
+            <h1>HOSPITALIZEE</h1>
+            <h4>the ultimate solution to hospital management</h4>
+        </div>
+        
+        <div class="btn-group">
+            <a href="/" class="btn btn-all">Home</a>
+            <a href="#end-content" class="btn btn-all">About Us</a>
+        </div>
+    </div>
+
+    <div class="login">
+        <div class="login-card">
+            <h1 style="color: red; text-align: center;">EMERGENCY</h1>
+            <p>We Are Ready to Help—Register Here</p>
+
+            <div style="padding:10px; font-size: 18px;">
+                First name: {{fname}}<br>
+                Last name: {{lname}}<br>
+                Date of birth: {{dob}}<br>
+                Phone number: {{phno}}<br>
+                Email: {{email}}<br>
+                Address: {{address}}<br>
+                Reason for visit: {{reason}}<br>
+                <button type="button" class="btn-btn-primary" style="margin-top:10px;">Edit Patient</button>
+                
+            <div id="content">
+                <h4 class="headings"> Nearest available hospitals</h4>
+            </div>
+            <div id="table">
+                <table class="table" border="1">
+                    <thead>
+                        <tr>
+                        <th scope="col">Hospital Name</th>
+                        <th scope="col">Address</th>
+                        <th scope="col">Emergency bed available</th>
+                        <th scope="col">Book bed</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>{{ }}</td>
+                            <td>{{ }}</td>
+                            <td>{{ }}</td>
+                            <td>{{ }}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>    
+                <button type="submit" class="login-btn">Submit</button>
+
+            </div>
+
+        </div>
+    </div>
+
+    <div class="spacer"></div>
+
+    <div id="end-content">
+        <h2>About Us</h2>
+        <p>Welcome to Hospitalizee, the ultimate solution to hospital management. We are dedicated to providing top-notch services to ensure efficient and effective healthcare management.</p>
+    </div>
+
+    <script>
+    function getLocation() {
+        navigator.geolocation.getCurrentPosition(
+            pos => {
+                const lat = pos.coords.latitude;
+                const lng = pos.coords.longitude;
+
+                fetch("/save-location", {
+                    method: "POST",
+                    headers: {
+                        "Content-Type": "application/json"
+                    },
+                    body: JSON.stringify({
+                        lat: lat,
+                        long: lng
+                    })
+                })
+                .then(res => res.json())
+                .then(data => alert(data.message));
+            },
+            err => alert("Location access denied")
+        );
+    }
+    </script>
+
+</body>
+</html>
