--- a/templates/patient_dashboard.html
+++ b/templates/patient_dashboard.html
@@ -73,6 +73,22 @@
             padding: 30px;
             background-color: #f1f1f1;
         }
+        table {
+            font-family: system-ui;
+            border-collapse: collapse;
+            width: 60%;
+            font-size: 15px;
+            }
+
+        td, th {
+            border: 1px solid #dddddd;
+            text-align: left;
+            padding: 8px;
+            }
+
+        tr:nth-child(even) {
+            background-color: #dddddd;
+            }
     </style>
 </head>
 <body>
@@ -88,40 +104,82 @@
             <a href="/emergency" class="btn btn-emergency">Emergency</a>
         </div>
     </div>
-    <div style="padding: 5px 25px; align-items: center; justify-content: space-between; display: flex;">
-        <h2>Welcome {{ user.fname }}, {{ user.id }}</h2>
-        <div class="btn-group"  style="padding-right: 100px;">
-            <a href="/patient/new-appointment" class="btn btn-all" style=" background-color: rgb(45, 179, 4); font-size: 20px;">Book New Appointment</a>
-            <a href="/patient/cancel-appointment" class="btn btn-all" style=" background-color: rgb(191, 43, 17); font-size: 20px;">Cancel Appointment</a>
+    <div class="login">
+        <div class="login-card">
+            <div style="padding: 5px 25px; align-items: center; justify-content: space-between; display: flex;">
+                <h2>Welcome {{ user.fname }}, {{ user.id }}</h2>
+                <div class="btn-group"  style="padding-right: 100px;">
+                    <a href="/patient/new-appointment" class="btn btn-all" style=" background-color: rgb(45, 179, 4); font-size: 20px;">Book New Appointment</a>
+                </div>
+            </div>
+            <div id="content" style="padding: 0px 25px">
+                <h3 class="headings" style="margin-bottom: 10px; color:#346578; font-family: system-ui;" >Upcoming Appointments </h3>
+            </div>
+            <div id="table" style="padding: 0px 25px">
+                <table class="table">
+                    <tr style="font-family: system-ui;">
+                        <th scope="col">Date</th>
+                        <th scope="col">Time/Slot</th>
+                        <th scope="col">Doctor</th>
+                        <th scope="col">Hospital</th>
+                        <th scope="col" style="width: 180px;">Cancel Appt.</th>
+                    </tr>
+                    <tr>
+                        <td>{{ }}</td>
+                        <td>{{ }}</td>
+                        <td>{{ }}</td>
+                        <td>{{ }}</td>
+                        <td>
+                            <a href="/patient/cancel-appointment"
+                            class="btn btn-all" style=" background-color: rgb(191, 43, 17);">
+                                Cancel Appointment
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>{{ }}</td>
+                        <td>{{ }}</td>
+                        <td>{{ }}</td>
+                        <td>{{ }}</td>
+                        <td>
+                            <a href="/patient/cancel-appointment"
+                            class="btn btn-all" style=" background-color: rgb(191, 43, 17);">
+                                Cancel Appointment
+                            </a>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+            <div style="height: 50px;"></div>
+            <div id="content" style="padding: 0px 25px">
+                <h3 class="headings" style="margin-bottom: 10px; color:#346578; font-family: system-ui;" >Previous Appointments </h3>
+            </div>
+            <div id="table" style="padding: 0px 25px">
+                <table class="table">
+                    <tr style="font-family: system-ui;">
+                        <th scope="col">Date</th>
+                        <th scope="col">Time/Slot</th>
+                        <th scope="col">Doctor</th>
+                        <th scope="col">Hospital</th>
+                        <th scope="col">Prepscription(if any)</th>
+                    </tr>
+                    <tr>
+                        <td>{{ }}</td>
+                        <td>{{ }}</td>
+                        <td>{{ }}</td>
+                        <td>{{ }}</td>
+                        <td>{{ }}</td>
+                    </tr>
+                    <tr>
+                        <td>{{ }}</td>
+                        <td>{{ }}</td>
+                        <td>{{ }}</td>
+                        <td>{{ }}</td>
+                        <td>{{ }}</td>
+                    </tr>
+                </table>
+            </div>
         </div>
-    </div>
-    <div style="padding: 0px 25px">
-        <h3>Your Upcoming Appointments</h3>
-        <table border = "2">
-            <tbody>
-            <tr>
-                <th>Date</th>
-                <th>Time/Slot</th>
-                <th>Doctor, Hospital</th>
-                <th>Status</th>
-            </tr>
-            </tbody>
-        </table>
-    </div>
-    <div style="height: 50px;"></div>
-    <div style="padding: 0px 25px">
-        <h3>Previous Appointments</h3>
-        <table border = "2">
-            <tbody>
-            <tr>
-                <th>Date</th>
-                <th>Time/Slot</th>
-                <th>Doctor, Hospital</th>
-                <th>Status</th>
-                <th>Prescriptions(if any)</th>
-            </tr>
-            </tbody>
-        </table>
     </div>
 </body>
 </html>
