--- a/templates/hospital_login.html
+++ b/templates/hospital_login.html
@@ -218,7 +218,7 @@
 
             <div class="links">
                 <a href="#">Forgot Password?</a> <br><br>
-                <span>New here?</span> <a href="/hospital/registration">Register Here</a>
+                <span>New here?</span> <a href="/hospital/register">Register Here</a>
             </div>
         </div>
     </div>
