--- a/templates/hospital_dashboard.html
+++ b/templates/hospital_dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Patient Dashboard</title>
+    <title>Hospital Dashboard</title>
     <style>
         body {
             margin: 0;
@@ -73,6 +73,22 @@
             padding: 30px;
             background-color: #f1f1f1;
         }
+        table {
+            font-family: system-ui;
+            border-collapse: collapse;
+            width: 60%;
+            font-size: 15px;
+            }
+
+        td, th {
+            border: 1px solid #dddddd;
+            text-align: left;
+            padding: 8px;
+            }
+
+        tr:nth-child(even) {
+            background-color: #dddddd;
+            }
     </style>
 </head>
 <body>
@@ -88,40 +104,120 @@
             <a href="/emergency" class="btn btn-emergency">Emergency</a>
         </div>
     </div>
-    <div style="padding: 5px 25px; align-items: center; justify-content: space-between; display: flex;">
-        <h2>Welcome {{ user.name }}, {{ user.id }}</h2>
-        <div class="btn-group"  style="padding-right: 100px;">
-            <a href="/patient/new-appointment" class="btn btn-all" style=" background-color: rgb(45, 179, 4); font-size: 20px;">Book New Appointment</a>
-            <a href="/patient/cancel-appointment" class="btn btn-all" style=" background-color: rgb(191, 43, 17); font-size: 20px;">Cancel Appointment</a>
+    <div class="login">
+        <div class="login-card">
+            <div style="padding: 5px 25px; align-items: center; justify-content: space-between; display: flex;">
+                <h2>Welcome Admin, {{ user.id }}</h2>
+                <div>Emergency bed available: </div>
+                <div class="btn-group"  style="padding-right: 100px;">
+                    <a href="/patient/doc_reg" class="btn btn-all" style=" background-color: rgb(45, 179, 4); font-size: 20px;">Add new Doctor</a>
+                </div>
+            </div>
+            <div id="content" style="padding: 0px 25px">
+                <h3 class="headings" style="margin-bottom: 10px; color:#346578; font-family: system-ui;" >Registered Doctors </h3>
+            </div>
+            <div id="table" style="padding: 0px 25px">
+                <table class="table">
+                    <tr style="font-family: system-ui;">
+                        <th scope="col">Name</th>
+                        <th scope="col">Department</th>
+                        <th scope="col">Specialisation</th>
+                        <th scope="col">Qualifications</th>
+                    </tr>
+                    <tr>
+                        <td>Priya Singh</td>
+                        <td>Orthopaedic</td>
+                        <td>Knee Transplant</td>
+                        <td>MBBS, MS, MD</td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                </table>
+            </div>
+            <div id="content" style="padding: 0px 25px">
+                <h3 class="headings" style="margin-bottom: 10px; color:#346578; font-family: system-ui;" >Registered Patients</h3>
+            </div>
+            <div id="table" style="padding: 0px 25px">
+                <table class="table">
+                    <tr style="font-family: system-ui;">
+                        <th scope="col">Name</th>
+                        <th scope="col">Doctor</th>
+                        <th scope="col">Department</th>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                </table>
+            </div>
+            <div id="content" style="padding: 0px 25px">
+                <h3 class="headings" style="margin-bottom: 10px; color:#346578; font-family: system-ui;" >Upcoming Appointments </h3>
+            </div>
+            <div id="table" style="padding: 0px 25px">
+                <table class="table">
+                    <tr style="font-family: system-ui;">
+                        <th scope="col">Name</th>
+                        <th scope="col">Date</th>
+                        <th scope="col">Time/Slot</th>
+                        <th scope="col">Doctor</th>
+                        <th scope="col">Department</th>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                </table>
+            </div>
+            <div style="height: 50px;"></div>
+            <div id="content" style="padding: 0px 25px">
+                <h3 class="headings" style="margin-bottom: 10px; color:#346578; font-family: system-ui;" >Previous Appointments </h3>
+            </div>
+            <div id="table" style="padding: 0px 25px">
+                <table class="table">
+                    <tr style="font-family: system-ui;">
+                        <th scope="col">Name</th>
+                        <th scope="col">Date</th>
+                        <th scope="col">Time/Slot</th>
+                        <th scope="col">Doctor</th>
+                        <th scope="col">Department</th>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                        <td></td>
+                    </tr>
+                </table>
+            </div>
         </div>
-    </div>
-    <div style="padding: 0px 25px">
-        <h3>Your Upcoming Appointments</h3>
-        <table border = "2">
-            <tbody>
-            <tr>
-                <th>Date</th>
-                <th>Time/Slot</th>
-                <th>Doctor, Hospital</th>
-                <th>Status</th>
-            </tr>
-            </tbody>
-        </table>
-    </div>
-    <div style="height: 50px;"></div>
-    <div style="padding: 0px 25px">
-        <h3>Previous Appointments</h3>
-        <table border = "2">
-            <tbody>
-            <tr>
-                <th>Date</th>
-                <th>Time/Slot</th>
-                <th>Doctor, Hospital</th>
-                <th>Status</th>
-                <th>Prescriptions(if any)</th>
-            </tr>
-            </tbody>
-        </table>
     </div>
 </body>
 </html>
