--- a/templates/hospital_dashboard.html
+++ b/templates/hospital_dashboard.html
@@ -76,17 +76,21 @@
         table {
             font-family: system-ui;
             border-collapse: collapse;
-            width: 60%;
+            width: 40%;
             font-size: 15px;
             }
 
         td, th {
             border: 1px solid #dddddd;
             text-align: left;
-            padding: 8px;
+            padding: 3px;
             }
 
-        tr:nth-child(even) {
+        th{
+            background-color: #8a8989ff;
+            }
+
+        tr{
             background-color: #dddddd;
             }
     </style>
@@ -99,7 +103,7 @@
         </div>
         
         <div class="btn-group">
-            <a href="patient/logout" class="btn btn-all">Logout</a>
+            <a href="/hospital/logout" class="btn btn-all">Logout</a>
             <a href="#end-content" class="btn btn-all">About Us</a>
             <a href="/emergency" class="btn btn-emergency">Emergency</a>
         </div>
@@ -108,110 +112,82 @@
         <div class="login-card">
             <div style="padding: 5px 25px; align-items: center; justify-content: space-between; display: flex;">
                 <h2>Welcome Admin, {{ user.id }}</h2>
-                <div>Emergency bed available: </div>
                 <div class="btn-group"  style="padding-right: 100px;">
                     <a href="/patient/doc_reg" class="btn btn-all" style=" background-color: rgb(45, 179, 4); font-size: 20px;">Add new Doctor</a>
                 </div>
             </div>
+
             <div id="content" style="padding: 0px 25px">
-                <h3 class="headings" style="margin-bottom: 10px; color:#346578; font-family: system-ui;" >Registered Doctors </h3>
+                <h3 class="headings" style="margin-bottom: 10px; color:#346578; font-family: system-ui;" >Emergency Details</h3>
             </div>
             <div id="table" style="padding: 0px 25px">
-                <table class="table">
+                <table class="table" style="width: 40%;">
                     <tr style="font-family: system-ui;">
-                        <th scope="col">Name</th>
-                        <th scope="col">Department</th>
-                        <th scope="col">Specialisation</th>
-                        <th scope="col">Qualifications</th>
+                        <th scope="col">Available beds</th>
+                        <th scope="col">Occupied beds</th>
+                        <th scope="col">Total beds</th>
                     </tr>
                     <tr>
-                        <td>Priya Singh</td>
-                        <td>Orthopaedic</td>
-                        <td>Knee Transplant</td>
-                        <td>MBBS, MS, MD</td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                </table>
-            </div>
-            <div id="content" style="padding: 0px 25px">
-                <h3 class="headings" style="margin-bottom: 10px; color:#346578; font-family: system-ui;" >Registered Patients</h3>
-            </div>
-            <div id="table" style="padding: 0px 25px">
-                <table class="table">
-                    <tr style="font-family: system-ui;">
-                        <th scope="col">Name</th>
-                        <th scope="col">Doctor</th>
-                        <th scope="col">Department</th>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                </table>
-            </div>
-            <div id="content" style="padding: 0px 25px">
-                <h3 class="headings" style="margin-bottom: 10px; color:#346578; font-family: system-ui;" >Upcoming Appointments </h3>
-            </div>
-            <div id="table" style="padding: 0px 25px">
-                <table class="table">
-                    <tr style="font-family: system-ui;">
-                        <th scope="col">Name</th>
-                        <th scope="col">Date</th>
-                        <th scope="col">Time/Slot</th>
-                        <th scope="col">Doctor</th>
-                        <th scope="col">Department</th>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>20</td>
+                        <td>
+                            <div style="display: flex; justify-content: space-between; align-items: center;">
+                                <span>20</span>
+                                <a href=""
+                                class="btn btn-all"
+                                style="background-color: rgba(17, 145, 191, 1);">
+                                    Update
+                                </a>
+                            </div>
+                        </td>
+                        <td>
+                            <div style="display: flex; justify-content: space-between; align-items: center;">
+                                <span>30</span>
+                                <a href=""
+                                class="btn btn-all"
+                                style="background-color: rgba(17, 145, 191, 1);">
+                                    Update
+                                </a>
+                            </div>
+                        </td>
                     </tr>
                 </table>
             </div>
             <div style="height: 50px;"></div>
-            <div id="content" style="padding: 0px 25px">
-                <h3 class="headings" style="margin-bottom: 10px; color:#346578; font-family: system-ui;" >Previous Appointments </h3>
-            </div>
             <div id="table" style="padding: 0px 25px">
                 <table class="table">
                     <tr style="font-family: system-ui;">
-                        <th scope="col">Name</th>
-                        <th scope="col">Date</th>
-                        <th scope="col">Time/Slot</th>
-                        <th scope="col">Doctor</th>
+                        <th scope="col">Assigned Doctor</th>
                         <th scope="col">Department</th>
                     </tr>
                     <tr>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
-                        <td></td>
+                        <td>Priya Singh</td>
+                        <td>Orthopaedic</td>
                     </tr>
                     <tr>
                         <td></td>
                         <td></td>
-                        <td></td>
+                    </tr>
+                </table>
+            </div>
+            <div id="content" style="padding: 0px 25px">
+                <h3 class="headings" style="margin-bottom: 10px; color:#346578; font-family: system-ui;" >Depatrments Present</h3>
+            </div>
+            <div id="table" style="padding: 0px 25px">
+                <table class="table" style="width: 20%;">
+                    <tr style="font-family: system-ui;">
+                        <th scope="col">Name</th>
+                        <th scope="col" style="width: 40%;">Details</th>
+                    </tr>
+                    <tr>
+                        <td>Orthopaedic</td>
+                        <td style="text-align: right;">
+                            <a href="#"
+                            class="btn btn-all" style=" padding-top: 2px; background-color: rgba(17, 145, 191, 1);">
+                                View
+                            </a>
+                        </td>
+                    </tr>
+                    <tr>
                         <td></td>
                         <td></td>
                     </tr>
