--- a/templates/hospital_registration.html
+++ b/templates/hospital_registration.html
@@ -230,6 +230,9 @@
                     </div>
                 </div>
 
+                <label>Emergency Capacity</label>
+                <input type="number" inputmode="numeric" name="emergency_capacity" required>
+
                 <div class="row">
                     <div class="field">
                         <label>Create Password</label>
