--- a/templates/hospital_dashboard.html
+++ b/templates/hospital_dashboard.html
@@ -83,7 +83,7 @@
         </div>
         
         <div class="btn-group">
-            <a href="patient/logout" class="btn btn-all">Logout</a>
+            <a href="/hospital/logout" class="btn btn-all">Logout</a>
             <a href="#end-content" class="btn btn-all">About Us</a>
             <a href="/emergency" class="btn btn-emergency">Emergency</a>
         </div>
