--- a/templates/patient_dashboard.html
+++ b/templates/patient_dashboard.html
@@ -99,7 +99,7 @@
         </div>
         
         <div class="btn-group">
-            <a href="patient/logout" class="btn btn-all">Logout</a>
+            <a href="/patient/logout" class="btn btn-all">Logout</a>
             <a href="#end-content" class="btn btn-all">About Us</a>
             <a href="/emergency" class="btn btn-emergency">Emergency</a>
         </div>
@@ -122,32 +122,30 @@
                         <th scope="col">Time/Slot</th>
                         <th scope="col">Doctor</th>
                         <th scope="col">Hospital</th>
-                        <th scope="col" style="width: 180px;">Cancel Appt.</th>
+                        <th scope="col">Cancel Appointment</th>
                     </tr>
-                    <tr>
-                        <td>{{ }}</td>
-                        <td>{{ }}</td>
-                        <td>{{ }}</td>
-                        <td>{{ }}</td>
-                        <td>
-                            <a href="/patient/cancel-appointment"
-                            class="btn btn-all" style=" background-color: rgb(191, 43, 17);">
-                                Cancel Appointment
-                            </a>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>{{ }}</td>
-                        <td>{{ }}</td>
-                        <td>{{ }}</td>
-                        <td>{{ }}</td>
-                        <td>
-                            <a href="/patient/cancel-appointment"
-                            class="btn btn-all" style=" background-color: rgb(191, 43, 17);">
-                                Cancel Appointment
-                            </a>
-                        </td>
-                    </tr>
+                    {% if u_app %}
+                        {% for app in u_app %}
+                        <tr>
+                            <td>{{ app.appointment_date }}</td>
+                            <td>{{ app.appointment_time }}</td>
+                            <td>{{ app.doctor_name }}</td>
+                            <td>{{ app.hospital_name }}</td>
+                            <td style="text-align: center;">
+                                <a href="/patient/cancel-appointment/{{ app.id }}"
+                                class="btn btn-all" style=" background-color: rgb(191, 43, 17); font-size: 15px; padding: 3px 10px;">
+                                    Cancel
+                                </a>
+                            </td>
+                        </tr>
+                        {% endfor %}
+                    {% else %}
+                        <tr>
+                            <td colspan="5" style="text-align:center; font-style:italic;">
+                                No previous appointments.
+                            </td>
+                        </tr>
+                    {% endif %}
                 </table>
             </div>
             <div style="height: 50px;"></div>
@@ -163,20 +161,23 @@
                         <th scope="col">Hospital</th>
                         <th scope="col">Prepscription(if any)</th>
                     </tr>
-                    <tr>
-                        <td>{{ }}</td>
-                        <td>{{ }}</td>
-                        <td>{{ }}</td>
-                        <td>{{ }}</td>
-                        <td>{{ }}</td>
-                    </tr>
-                    <tr>
-                        <td>{{ }}</td>
-                        <td>{{ }}</td>
-                        <td>{{ }}</td>
-                        <td>{{ }}</td>
-                        <td>{{ }}</td>
-                    </tr>
+                    {% if p_app %}
+                        {% for app in p_app %}
+                        <tr>
+                            <td>{{ app.appointment_date }}</td>
+                            <td>{{ app.appointment_time }}</td>
+                            <td>{{ app.doctor_name }}</td>
+                            <td>{{ app.hospital_name }}</td>
+                            <td>{{ app.prescription }}</td>
+                        </tr>
+                        {% endfor %}
+                    {% else %}
+                        <tr>
+                            <td colspan="5" style="text-align:center; font-style:italic;">
+                                No previous appointments.
+                            </td>
+                        </tr>
+                    {% endif %}
                 </table>
             </div>
         </div>
