--- a/templates/home.html
+++ b/templates/home.html
@@ -343,8 +343,8 @@
             <div class="login-dropdown">
                 <a href="#" class="btn btn-all">Login</a>
                 <div class="dropdown-menu">
-                    <a href="/login/patient">Patient</a>
-                    <a href="/login/hospital">Hospital</a>
+                    <a href="/patient/login">Patient</a>
+                    <a href="/hospital/login">Hospital</a>
                 </div>
             </div>
             <a href="#end-content" class="btn btn-all">About Us</a>
