--- a/templates/home.html
+++ b/templates/home.html
@@ -357,7 +357,7 @@
             <h1>One Platform for Smart Healthcare Management</h1>
             <p>
                 Hospitalizee is a cloud-based healthcare management system designed
-                for hospitals, clinics, laboratories, and pharmacies.
+                for hospitals, clinics, laboratories, and patients for sanywhere and anytime emergency access.
             </p>
             <a href="#" class="btn btn-primary">Add your Hospital</a>
             <a href="#" class="btn btn-secondary">Book an Appointment</a>
